# artincam-helpers

.woodpecker/: biuld-windows.yml  build-image-process.yml  build-linux.yml  build-windows.yml  release.yml
image-process/: .gitignore  Makefile  README.md  pyproject.toml
image-process/src/: main.py
